
#
#   Stack tests
#
add_subdirectory(stack)

#
#   Socket tests
#
add_subdirectory(sockets)

#
#   Util tests
#
add_subdirectory(util)

#
#   Byte Gen Tests
#
add_subdirectory(bytegen)

#
#   Binloader Tests
#
add_subdirectory(binloader)

#
#   VM Tests
#
add_subdirectory(vm)


#
#   Scope Tree Tests
#
add_subdirectory(scopetree)